--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,7 +29,7 @@ configuration: Release
 
 build:
   parallel: true                  # enable MSBuild parallel builds
-  project: SoftGene.DependencyInstaller.sln      # path to Visual Studio solution or project
+  project: src\SoftGene.DependencyInstaller.sln      # path to Visual Studio solution or project
 
   # MSBuild verbosity level
   verbosity: minimal
