--- a/src/SoftGene.DependencyInstaller/SoftGene.DependencyInstaller.csproj
+++ b/src/SoftGene.DependencyInstaller/SoftGene.DependencyInstaller.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coveralls.io" Version="1.4.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0" />
   </ItemGroup>
 
