--- a/appveyor.yml
+++ b/appveyor.yml
@@ -49,9 +49,9 @@ build_script:
 
 test_script:
   # restore packages for our unit tests
-  - cmd: dotnet restore src\SoftGene.DependencyInstaller.Test\SoftGene.DependencyInstaller.Tests.csproj --verbosity m
+  - cmd: dotnet restore DependenciesInstaller\src\SoftGene.DependencyInstaller.Test\SoftGene.DependencyInstaller.Tests.csproj --verbosity m
   # run the unit tests (requires changing into the test directory)
-  - cmd: cd src\SoftGene.DependencyInstaller.Tests
+  - cmd: cd DependenciesInstaller\src\SoftGene.DependencyInstaller.Tests
   - cmd: dotnet xunit
 on_finish :
   # any cleanup in here
