--- a/appveyor.yml
+++ b/appveyor.yml
@@ -52,4 +52,10 @@ test_script:
   - cmd: dotnet test
 on_finish :
   # any cleanup in here
-deploy: off
+
+deploy:
+  - provider: NuGet 
+    api_key:
+      secure: /CMWwt2uWXqNXIRxORsl6G8r6Pimnhw0kuZPN5dF6qdYzuXKnquJHqnOsgN73Xso
+    skip_symbols: false
+    artifact: SoftGene.DependenciesInstaller.nupkg
