--- a/appveyor.yml
+++ b/appveyor.yml
@@ -61,7 +61,7 @@ on_finish :
 
 deploy_script:
   - cmd: cd ..
-  - cmd: cd src\SoftGene.DependencyInstaller
+  - cmd: cd SoftGene.DependencyInstaller
   - cmd: dotnet pack
   - cmd: dotnet nuget push SoftGene.DependencyInstaller.0.9.{build}.nupkg NUGET_API_KEY -s https://api.nuget.org/v3/index.json
 
