--- a/appveyor.yml
+++ b/appveyor.yml
@@ -63,7 +63,8 @@ deploy_script:
   - cmd: cd ..
   - cmd: cd SoftGene.DependencyInstaller
   - cmd: dotnet pack
-  - cmd: dotnet nuget push SoftGene.DependencyInstaller.0.9.{build}.nupkg NUGET_API_KEY -s https://api.nuget.org/v3/index.json
+  - cmd: dotnet nuget setapikey NUGET_API_KEY -source https://api.nuget.org/v3/index.json
+  - cmd: dotnet nuget push SoftGene.DependencyInstaller.0.9.{build}.nupkg -source https://api.nuget.org/v3/index.json
 
 notifications:
   # Email
