--- a/appveyor.yml
+++ b/appveyor.yml
@@ -60,6 +60,9 @@ on_finish :
   # any cleanup in here
 
 deploy_script:
+  - cmd: cd ..
+  - cmd: cd SoftGene.DependencyInstaller	  - cmd: cd SoftGene.DependencyInstaller
+  - cmd: dotnet pack
   provider: NuGet
   server:                  # remove to push to NuGet.org
   api_key:
